--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "permaculture-ai-chatbot",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "jest",
+    "build": "next build"
   },
   "keywords": [],
   "author": "",
@@ -14,17 +17,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.6.2",
-    "morgan": "^1.10.0",
-    "openai": "^4.60.0",
-    "uuid": "^10.0.0",
-    "winston": "^3.14.2"
+    "mongoose": "^8.6.2"
   },
   "devDependencies": {
     "jest": "^29.7.0",
-    "nodemon": "^3.1.4",
-    "supertest": "^7.0.0"
+    "nodemon": "^3.0.3"
   }
 }
