--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ node_modules/
 
 # Environment variables
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Logs
 *.log
@@ -15,6 +19,7 @@ coverage/
 
 # Next.js build output
 .next/
+out/
 
 # Debug logs
 npm-debug.log*
