--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "express": "^4.21.0",
     "express-rate-limit": "^7.4.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.6.2",
     "next": "^14.2.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,7 +23,8 @@
   },
   "devDependencies": {
     "jest": "^29.7.0",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "supertest": "^7.0.0"
   },
   "engines": {
     "node": "18.x"
