--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "permaculture-ai-chatbot",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next dev",
+    "dev": "npx next dev",
     "build": "next build",
     "start": "node server.js",
     "lint": "next lint",
@@ -15,6 +15,7 @@
     "express": "^4.21.0",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
+    "next": "^14.2.11",
     "winston": "^3.14.2"
   },
   "devDependencies": {
