--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -4,13 +4,18 @@ services:
   github:
     branch: main
     deploy_on_push: true
-    repo: /Giving-Back-Studio/ooshBE
+    repo: Giving-Back-Studio/ooshBE
   build_command: npm run build
   run_command: npm start
   envs:
   - key: NODE_ENV
     value: production
   - key: SUPABASE_URL
+    scope: RUN_AND_BUILD_TIME
     value: ${SUPABASE_URL}
   - key: SUPABASE_ANON_KEY
+    scope: RUN_AND_BUILD_TIME
     value: ${SUPABASE_ANON_KEY}
+  - key: OPENAI_API_KEY
+    scope: RUN_AND_BUILD_TIME
+    value: ${OPENAI_API_KEY}
