--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && npm run test",
     "start": "node server.js",
     "lint": "next lint",
     "test": "jest --detectOpenHandles"
@@ -16,14 +16,18 @@
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "next": "^14.2.11",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "winston": "^3.14.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.4",
+    "@types/react": "18.3.5",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "typescript": "5.6.2"
   },
   "engines": {
     "node": "18.x"
