--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-validator": "^7.2.0",
+    "jose": "^5.9.2",
     "jsonwebtoken": "^9.0.2",
     "next": "^14.2.11",
     "react": "^18.3.1",
