--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-validator": "^7.2.0",
     "jose": "^5.9.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "next": "^14.2.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
