--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "permaculture-ai-chatbot",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint",
     "test": "echo \"No tests specified\" && exit 0"
   },
