--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-rate-limit": "^6.7.0",
     "express-validator": "^7.2.0",
     "jose": "^5.9.2",
     "jsonwebtoken": "^9.0.2",
@@ -22,8 +23,7 @@
     "next": "^14.2.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "winston": "^3.14.2",
-    "express-rate-limit": "^6.7.0"
+    "winston": "^3.14.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -50,4 +50,3 @@
     ]
   }
 }
-
