--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "permaculture-ai-chatbot",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "nodemon server.js",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
-    "lint": "next lint",
+    "lint": "eslint .",
     "test": "jest"
   },
   "dependencies": {
@@ -27,13 +28,17 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/node": "^7.25.0",
     "@babel/preset-env": "^7.25.4",
     "@types/react": "18.3.5",
+    "eslint": "^9.10.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.4",
     "supertest": "^7.0.0",
     "typescript": "5.6.2"
   },
   "engines": {
-    "node": "18.x"
+    "node": ">=18.x"
   },
   "testEnvironment": "node",
   "testPathIgnorePatterns": [
@@ -48,5 +53,6 @@
         ]
       }
     ]
-  }
+  },
+  "type": "module"
 }
